# crabby

./: .all-contributorsrc  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.zig  build.zig.zon  clippy.toml  crabby.bat  rustfmt.toml
docs/: contribute.html  index.html  package-lock.json  tailwind.config.js
docs/css/: contribute.css  input.css  output.css  style.css  windows.css
docs/download/pages/: windows.html
examples/: EXAMPLES.md  example.crab  export.crab  hello.cb  hello_world.crab  ifelse.crab  imports.crab  lambda.crab  loops.crab  macros.crab  math.crab
lib/func/: Function.zig
src/: Parser.zig  StandardLibrary.zig  SyntaxHighlighting.zig  ThrowError.zig  Tokenizer.zig  compile.rs  crabby.c  crabby.h  crabbylib.c  crabbylib.h  hello.cb  macros.rs  main.rs  main.zig  utils.rs
src/lexer/: mod.rs  tokenizer.rs
src/parser/: ast.rs  parser.rs
website/: docusaurus.config.js  package-lock.json  package.json
website/docs/: intro.md
website/docs/getting-started/: download.md
website/docs/tutorial-basics/: _category_.json  create-a-page.md
website/src/components/HomepageFeatures/: index.js  styles.module.css
website/src/css/: custom.css
website/src/pages/: docs.md  index.js
