[package]
name = "crabby"
description = "A modern Programming Language with Python like syntax but has a functional language feature."
authors = ["Kazooki123"]
keywords = ["language", "python", "programming-language", "modern"]
version = "0.1.0"
repository = "https://github.com/Kazooki123/crabby"
edition = "2024"
license = "MIT"

[dependencies]
logos = "0.13"
thiserror = "1.0"
codespan-reporting = "0.11"
clap = { version = "4.4", features = ["derive"] }
